--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,11 @@ button {
     cursor: pointer;
     border-radius: .2rem;
 }
+
+
+.form-error {
+    display: none;
+    color: red;
+    font-size: 0.9rem;
+    margin-top: 2px;
+}
